# ursid-sqlx

./: Cargo.toml  README.md  rustfmt.toml
docs/: naming.md
src/: helper.rs  lib.rs  query.rs  value.rs
src/crud/: delete.rs  insert.rs  mod.rs  replace.rs  update.rs
src/error/: crud_error.rs  execute_error.rs  mod.rs  query_error.rs  syntax_error.rs
src/sql_lang/: mod.rs
src/sql_lang/clause/: group_by.rs  having.rs  mod.rs  order_by.rs  sql_from.rs  sql_on.rs
src/sql_lang/clause/sql_in/: in_kind.rs  mod.rs
src/sql_lang/clause/sql_join/: joined_table.rs  mod.rs  table_reference.rs
src/sql_lang/clause/sql_where/: mod.rs
src/sql_lang/clause/where_like/: mod.rs  predicate.rs
src/sql_lang/expression/: function.rs  grammar.rs  identifier.rs  mod.rs
src/sql_lang/statement/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/tests/: mod.rs
src/tests/clause/: group_by.rs  having.rs  mod.rs  order_by.rs
src/tests/clause/sql_from/: join.rs  join_with_subquery.rs  mod.rs  single_table.rs
src/tests/clause/sql_where/: column.rs  expression.rs  full.rs  in_subquery.rs  in_values.rs  mod.rs
src/tests/expression/: mod.rs
src/tests/statement/: delete.rs  update.rs
src/tests/statement/select/: basic.rs  expression.rs  full.rs  group_by.rs  group_by_iter.rs  join.rs  mod.rs  order_by.rs  order_by_iter.rs  order_by_iter_with_join.rs
ursid-sqlx-macros/: Cargo.toml
ursid-sqlx-macros/src/: lib.rs
