[package]
name = "ursid_sqlx"
version = "0.1.0"
repository = "https://github.com/mikecaines/ursid-sqlx"
edition = "2021"

[dependencies]
ursid_sqlx_macros = { path = "ursid-sqlx-macros" }
sqlx = { version = "0.7.1" }
chrono = { version = "0.4.19", optional = true }
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.5.4", optional = true }

[dev-dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls"] }

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres", "lazy_static", "regex"]
chrono-datetime = ["chrono", "sqlx/chrono"]
